optlite-webllm/opt-mentor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opt-mentor # Replace with your own name
  namespace: certificate
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2  # 保留 /opt-mentor 路徑
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: public
  tls:
    - hosts:
        - deep.cs.cityu.edu.hk
      secretName: letsencrypt-production-tls
  rules:
    - host: deep.cs.cityu.edu.hk
      http:
        paths:
          - path: /optmentor/opt-mentor(/|$)(.*) #Replace to your path
            pathType: Prefix
            backend:
              service:
                name: opt-mentor # Replace with your own name
                port:
                  number: 8000 #Replace to your port
